# chalets-main-complet

./: .gitignore  activate_owner.sh  create_missing_profiles.py  deploy_free_no_payment.md  deploy_heroku.md  pyproject.toml  pythonanywhere_setup.md  requirements.txt  requirements_prod.txt  vercel.json  vercel_config.json
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_full_name_and_more.py  0003_userprofile_is_owner.py
accounts/templates/accounts/: delete_account.html  login.html  password_change.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  (+3 more)
api/: API_TEST_DATA.md  filters.py  index.py  permissions.py  run_api_tests.py  serializers.py  tests.py  urls.py  views.py
booking/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py  views_scan.py
booking/migrations/: 0001_initial.py  0002_bookingguest.py  0003_paymentprovider_owner_alter_paymentprovider_icon.py  0004_bookingguest_checkin_checkout_times.py
config/: settings.py  settings_prod.py  urls.py
core/templates/: base.html
docs/: project_rules.md  qr_code_system.md
portfolio/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  widgets.py
portfolio/migrations/: 0001_initial.py  0002_property_owner.py  0003_alter_property_slug.py  0004_amenity_owner_alter_amenity_name_and_more.py
theme/: apps.py
theme/static_src/: package-lock.json  package.json
theme/templates/: base.html
(+28 files in other folders)
