[project]
name = "chalets-main"
version = "1.0.0"
description = "Chalets booking system"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.9.1",
    "Django==5.2.6",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.0",
    "setuptools==80.9.0",
    "django-filter==24.1",
    "django-cors-headers==4.3.0",
    "django-browser-reload==1.19.0",
    "django-crispy-forms==2.4",
    "django-tailwind==4.2.0",
    "django-unfold==0.65.0",
    "pillow==11.3.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
    "dj-database-url==2.1.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*"]
